# mesedi

./: .gitignore  README.md
.github/workflows/: release-sdk-python.yml  release-sdk-typescript.yml
backend/: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  fly.toml  go.mod  go.sum
backend/cmd/api/: main.go
backend/cmd/mesedi-migrate-to-postgres/: main.go
backend/cmd/mesedi-pg-smoke/: main.go
backend/docs/: DISASTER_RECOVERY.md
backend/internal/api/: abuse.go  abuse_admin.go  admin.go  auth.go  billing.go  cors.go  halt_subscribers.go  handlers.go  middleware.go  ratelimit.go  signup.go  webhook_dispatch.go
backend/internal/dashboard/: dashboard.go
backend/internal/detectors/: drift.go  injection.go
backend/internal/events/: types.go
backend/internal/mail/: mailer.go  suspension_template.go  welcome_template.go
backend/internal/playbooks/: playbooks.go
backend/internal/pricing/: pricing.go
backend/internal/store/: embed.go  postgres.go  sqlite.go  store.go
backend/internal/webhooks/: adapters.go  dispatcher.go
branding/: mesedi-brand-system.html
branding/favicon_package/: site.webmanifest
concept-idea/: DETAILED_CONCEPT.md
dashboard/: tsconfig.tsbuildinfo
dashboard/app/: globals.css  layout.tsx  page.tsx
dashboard/app/app/: layout.tsx  page.tsx
dashboard/app/login/: page.tsx
dashboard/lib/: api.ts  auth.ts
docs/: DEVELOPMENT_CHECKLIST.md  GAPS_AND_CAPABILITIES_DESIGN.md  PILOT_PITCH.md  PROJECT_REGISTRY.md  REPAIR_TIER_ROADMAP.md  V2_DEFERRAL_NOTES.md
docs/canary systems/: FORMATION_CHECKLIST.md  MAILING_ADDRESS.md
docs/canary systems/logo/: README.md
local/: SHOW_HN_DRAFT.md
sdk-python/: README.md  pyproject.toml
sdk-python/mesedi/: __init__.py  _context.py  _shipper.py  anthropic_integration.py  client.py  events.py  halt.py  halt_stream.py  observe.py  tool.py  wrap.py
sdk-python/mesedi/integrations/: __init__.py  crewai.py  langchain.py
sdk-python/sandbox/: anthropic_test.py  chatty_agent.py  crewai_adapter_test.py  dashboard_halt_test.py  fake_agent.py  halt_remote_test.py  halt_test.py  identical_call_agent.py  injection_test.py  langchain_adapter_test.py  observe_test.py  real_agent.py  slow_agent.py  validator_fail_agent.py
sdk-typescript/: LICENSE  README.md  package-lock.json  package.json  tsconfig.json  tsconfig.sandbox.json
sdk-typescript/dist-sandbox/sandbox/: halt_remote_test.js  halt_remote_test.js.map  halt_test.js  halt_test.js.map  parity_test.js  parity_test.js.map  real_agent.js  real_agent.js.map
sdk-typescript/dist-sandbox/src/: anthropic_integration.js  anthropic_integration.js.map  client.js  events.js  (+16 more)
sdk-typescript/sandbox/: halt_remote_test.ts  halt_test.ts  parity_test.ts  real_agent.ts  vercel_ai_adapter_test.ts
sdk-typescript/src/: anthropic_integration.ts  client.ts  context.ts  events.ts  halt.ts  halt_stream.ts  index.ts  observe.ts  tool.ts  wrap.ts
synthetic-org/: .gitignore  CONTINUOUS_TRAFFIC.md  README.md  requirements.txt  runner.py  synthetic_inputs.py
synthetic-org/agents/: __init__.py  clinical_summarizer.py  contract_reviewer.py  financial_research.py  incident_responder.py  support_triager.py
synthetic-org/scripts/: ai.mesedi.synthetic-org.plist  continuous_traffic.sh  install_continuous_traffic.sh  stop_continuous_traffic.sh
(+44 files in other folders)
