[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mesedi"
version = "0.0.2"
description = "Mesedi SDK — guardians for autonomous AI."
readme = "README.md"
requires-python = ">=3.9"
license = "MIT"
authors = [
    { name = "Verdifax, LLC" },
]
keywords = ["ai", "agents", "observability", "attestation", "mesedi"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "httpx>=0.24",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "mypy>=1.0",
]

[project.urls]
Homepage = "https://mesedi.ai"

[tool.hatch.build.targets.wheel]
packages = ["mesedi"]

[tool.hatch.build.targets.sdist]
include = [
    "/mesedi",
    "/README.md",
    "/pyproject.toml",
]

[tool.mypy]
strict = true
python_version = "3.9"
